# licitaciones-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
deploy/production/: .env.production.example  Caddyfile  README.md  check-health.sh  docker-compose.override.yml  harden-vps.sh  sshd-licitaciones-hardening.conf
docker/postgres-bm25/: Dockerfile
docs/: architecture.md  deployment.md  ocds-mapping.md
examples/: claude_desktop_config.json
src/licitaciones_mcp/: __init__.py  cli.py  config.py  observability.py
src/licitaciones_mcp/_migrations/: __init__.py  env.py
src/licitaciones_mcp/_migrations/versions/: 0001_baseline.py  0002_fts_pgvector.py  0003_scheduler.py  0004_documents.py  0005_source_fetch_runs.py  0006_embedding_vector.py  0007_bm25_search_index.py
src/licitaciones_mcp/core/: catalogs.py  countries.py  dedupe.py  models.py  normalization.py  quality.py  scoring.py
src/licitaciones_mcp/documents/: __init__.py  base.py  downloader.py  parser_pypdf.py  processor.py
src/licitaciones_mcp/embeddings/: __init__.py  base.py  factory.py  openai.py
src/licitaciones_mcp/http/: __init__.py  client.py
src/licitaciones_mcp/jobs/: __init__.py  runner.py  scheduler.py
src/licitaciones_mcp/ocds/: __init__.py  mapper.py  package.py
src/licitaciones_mcp/server/: app.py  auth.py  tools.py
src/licitaciones_mcp/sources/: __init__.py  base.py  placsp.py  ted.py
src/licitaciones_mcp/storage/: __init__.py  database.py  migrations.py  models.py
tests/: test_config.py  test_database_search_backend.py  test_documents.py  test_http_client.py  test_mcp_contract.py  test_normalization.py  test_ocds_mapper.py  test_placsp_parser.py  test_production_deploy_config.py  test_quality.py  test_runner.py  test_scheduler.py  test_scoring.py  test_ted_parser.py  test_tool_search_modes.py
tests/fixtures/: placsp_atom.xml  ted_response.json
tests/integration/: conftest.py  test_database_roundtrip.py  test_mcp_jobs_e2e.py  test_migrations.py  test_search.py
